--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Build and deploy
 
 # Controls when the workflow will run
 on:
-  push:
-    branches: [ master ]
+  # push:
+    # branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
